# Traffic_Estimator

./: .gitignore  CMakeLists.txt  Config.h.in  LICENSE.md  README.md
lib/kernel/: acme-roadrunner.dtb
lib/opencv-4/lib/: .modules.txt.swp  modules_name.txt
media/capture/road_1/: lines.txt
media/dataset/road_10/1/: label.txt
media/dataset/road_10/3/: label.txt
media/dataset/road_10/4/: label.txt
media/dataset/road_10/5/: label.txt
media/dataset/road_11/: lines.txt
media/dataset/road_11/1/: label.txt
media/dataset/road_11/2/: label.txt
media/dataset/road_11/3/: label.txt
media/dataset/road_11/4/: label.txt
media/dataset/road_11/5/: label.txt
media/dataset/road_12/: lines.txt
media/dataset/road_12/1/: label.txt
media/dataset/road_13/: lines.txt
media/dataset/road_13/1/: label.txt
media/dataset/road_13/10/: label.txt
media/dataset/road_13/2/: label.txt
media/dataset/road_13/3/: label.txt
media/dataset/road_13/4/: label.txt
media/dataset/road_13/5/: label.txt
media/dataset/road_13/6/: label.txt
media/dataset/road_13/7/: label.txt
media/dataset/road_13/8/: label.txt
media/dataset/road_14/: lines.txt
media/dataset/road_15/: lines.txt
media/dataset/road_15/4/: label.txt
media/dataset/road_15/5/: label.txt
media/dataset/road_15/7/: label.txt
media/dataset/road_15/9/: label.txt
media/dataset/road_16/: lines.txt
media/dataset/road_16/1/: label.txt
media/dataset/road_16/2/: label.txt
media/dataset/road_17/: lines.txt
media/dataset/road_17/1/: label.txt
media/dataset/road_17/3/: label.txt
media/dataset/road_17/5/: label.txt
media/dataset/road_17/6/: label.txt
media/dataset/road_17/8/: label.txt
media/dataset/road_18/: lines.txt
media/dataset/road_19/: lines.txt
media/dataset/road_2/: lines.txt
media/dataset/road_3/: lines.txt
media/dataset/road_6/: lines.txt
media/dataset/road_7/: lines.txt
media/dataset/road_8/: lines.txt
media/dataset/road_9/: lines.txt
media/svm_dataset/: dataset.txt
models/svm/: svm_model.xml  svm_model_new.xml
result/: evaluated.txt  labels.txt  result.txt  result_table.txt
scripts/: estimate
src/: main.cpp
src/entity/: Parameters.hpp  Result.hpp
src/estimator/: TrafficEstimator.cpp  TrafficEstimator.hpp
src/evaluate/: Evaluate.cpp  Evaluate.hpp
src/tracker/: VehicleTracker.cpp  VehicleTracker.hpp
src/utils/: Capture.hpp  CmdLineParser.cpp  FileUtils.cpp  FileUtils.hpp  Lane.cpp  Lane.hpp  Progressor.hpp
(+218 files in other folders)
